--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ excerpt_separator  : "<!--more-->"
 include            : ['.htaccess']
 # Exclude these files from your production _site
 exclude:
+    - README.md
     - .sass-cache
     - Gemfile
     - Gemfile.lock
