--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 title: 'Wael Farah'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'A Flexible Theme for Jekyll'
+slogan: 'Dr. Wael Farah'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
 description: 'Dr. Wael Farah | SETI Institute'
