Add twitter card to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -195,6 +195,7 @@ og_type                              : 'website'
 
 socialmedia:
     gmail     : wael.a.farah
+    twitter   : Astro_Wael
 
 
 #        ____  _
